	New addition to default build: dpu414
	Omit from default build: aed ai msdos/kermit selanar

	* src/standard.c:  Replace incorrectly defined macros FMIN, FMAX with
	GPMIN, GPMAX.
	Bug #1969415

	* src/set.c (set_mouse) src/show.c (show_mouse) src/mouse.c src/mouse.h:
	Rework mouse option parsing to use dynamically allocated strings and
	try_to_get_string().

2008-05-31  Thomas Sefzick <thse@users.sourceforge.net>

	* term/epson.trm:  Add support for the Seiko DPU-414 thermal printer
	'set term dpu414'.

2008-05-31  Allin Cottrell <cottrell@wfu.edu>

	* term/metapost.trm (MP_filled_polygon):  Limit the number of vertices
	per line of output.

2008-05-30  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (eval_plots):  'with rgbimage' does not use a palette.

	* src/graphics.c (plot_c_bars do_key_sample) docs/gnuplot.doc
	demo/candlesticks.dem:  Candlesticks used to approximate a solid fill by
	drawing three vertical bars.  Now we use a true solid fill to indicate
	(open > close). This is the standard convention for financial data.

2008-05-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c (make_tics):  Don't generate tics for an empty axis range.

	* term/pbm.trm (PBM_options):  Make the tic size independent of the
	font size.
	Bug #1969415

2008-05-29  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/hidden3d.c (sort_polys_by_z in_front coord_to_treecell):
	Add range-checks to the calculation of quadtree array indices.
	Bugs #1969415 #1728063

2008-05-27  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wtext.c (TextInit), src/win/wgraph.c (GraphInit):
	Increase buffer sizes which contain the path to wgnuplot.ini.  Fixes
	crashes on systems with very long paths of the %APPDATA% directory.

2008-05-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (need_fill_border): LT_UNDEFINED really means
	"use default color"

	* src/graphics.c (do_key_sample): Do not draw errorbars on candlestick
	key sample
