@@ -20,6 +20,7 @@ New features, changes and fixes since gnuplot version 4.2
 * NEW the 'bind' command accepts non-keyboard triggers, e.g. 'close'
 * NEW individual plots can be omitted from autoscaling of axis ranges
 * NEW more smoothing options: new kernels (for dgrid3d) and 'smooth cumulative'
+* NEW commands 'show bind' and 'reset bind'
 * NEW terminal dpu414 - Seiko DPU-414 thermal printer
 * FIX remove the limit of 64 characters read as string data from a data file
 * FIX remainder of command line is not lost after a "load" command
