@@ -12,6 +12,10 @@
 	Rework mouse option parsing to use dynamically allocated strings and
 	try_to_get_string().
 
+	* src/tables.c src/tables.h src/show.c src/unset.c:  The 'bind' command
+	doesn't follow usual gnuplot syntax conventions. Provide new synonyms
+	"show bind" and "reset bind" that are less unexpected.
+
 2008-05-31  Thomas Sefzick <thse@users.sourceforge.net>
 
 	* term/epson.trm:  Add support for the Seiko DPU-414 thermal printer
